[package]
name = "linebar"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rudolfmuller/linebar.git"
readme = "README.md"
description = "A tool for customizing the status bar (Wayland: Sway)"
keywords = ["sway", "wayland", "bar", "rust"]
categories = ["configuration"]

[dependencies]
sysinfo = "0.38.4"
chrono = "0.4.44"
strfmt = "0.2.5"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
