[package]
name = "linebar"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rudolfmuller/linebar.git"
readme = "README.md"
description = "A simple tool for formatting stdout for the swaybar. (Wayland: Sway)"
keywords = ["sway", "wayland", "linux", "status-bar", "swaybar"]
categories = ["config"]

[dependencies]
sysinfo = "0.38.4"
chrono = "0.4.44"
strfmt = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
thiserror = "2.0.18"
anyhow = "1.0.102"

